syntax="proto3";

package intrvproto;
option go_package = "github.com/RafalSalwa/interview-app-srv/intrvproto";

import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string username = 2;
  string email = 3;

  google.protobuf.Timestamp created_at = 4;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUsersRequest {
  repeated GetUserRequest users = 1;
}

message GenericResponse {
  string status = 1;
  string message = 2;
}

message UserResponse { User user = 1; }

message GetUserResponse {
  string username = 1;
  string email = 2;
}

message GetUsersResponse {
  repeated GetUserResponse users = 1;
  string email = 2;
}

message VerifyUserRequest { string code = 1;}
message VerificationResponse { bool success = 1;}
